kustomize/bookstore/base/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-worker
  labels:
    app: bookstore-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstore-worker
  template:
    metadata:
      labels:
        app: bookstore-worker
    spec:
      containers:
        - name: worker
          image: bookstore/worker:latest
