kustomize/bookstore/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstore-api
  labels:
    app: bookstore-api
spec:
  type: ClusterIP
  selector:
    app: bookstore-api
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
