kustomize/bookstore/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstore-frontend
  labels:
    app: bookstore-frontend
spec:
  type: LoadBalancer
  selector:
    app: bookstore-frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
